@@ -10,6 +10,7 @@ Revision history for Exception-Delayed
  - fix missing call in example
 
  [ENHANCEMENTS]
+ - new method: wantany
 
 0.001 2015-04-18
  - Initial release
